# NaniteTree

./: CMakeLists.txt  LICENSE  Mesh_Simplification.cpp  Mesh_Simplification.h  README.md
Mesh_Simplification/: .gitignore  CMakeLists.txt  Mesh_Simplification.cpp  Mesh_Simplification.h  README.md
Mesh_Simplification/Houdini18.5_dso/: NaniteSimplification.exp
Mesh_Simplification/Houdini19.0.383_dso/: NaniteSimplification.exp  NaniteSimplification.lib
Mesh_Simplification/Houdini19.5_dso/: NaniteSimplification.exp  NaniteSimplification.lib
Mesh_Simplification/dso/: NaniteSimplification.exp  NaniteSimplification.lib
Mesh_Simplification/include/CGAL/: version.h
Mesh_Simplification/include/CGAL/boost/graph/: Euler_operations.h
Mesh_Simplification/include/Eigen/: Core
Mesh_Simplification/include/Eigen/src/Core/: PartialReduxEvaluator.h
Mesh_Simplification/include/Eigen/src/Core/arch/Default/: BFloat16.h  GenericPacketMathFunctions.h  Half.h
Mesh_Simplification/include/Eigen/src/Core/util/: Macros.h
NaniteFoliageTool/: foliagenanitetool.hda  generateImportJson.py  top_FoliageNaniteTool.hda
NaniteFoliageTool/Hips/: Temp.hip
NaniteFoliageTool/Python/: reimport_assets.py
Webpage/: index.html
